get in touch spacing fix

--- a/src/getInTouch/GetInTouch.css
+++ b/src/getInTouch/GetInTouch.css
@@ -27,3 +27,14 @@
 .getInTouch > a > img:hover {
   transform: scale(1.08) !important;
 }
+
+@media screen and (max-width: 470px) {
+  .linkedin {
+    margin-bottom: 2em;
+  }
+  .linkedin,
+  .gmail,
+  .github {
+    width: 90vw;
+  }
+}
